--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="framework.css">
+    <link rel="stylesheet" href="12bool.css">
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
@@ -201,6 +201,134 @@
 
 
 
+
+
+    </div>
+
+    <div class="container margin-top-10">
+        <h2>Nested</h2>
+
+        <div class="row">
+
+            <div class="col-7 bg-blue padding-10">
+
+                <div class="row">
+
+                    <div class="col-3 bg-green height-50"></div>
+
+                    <div class="col-6 bg-green height-50"></div>
+
+                    <div class="col-3 bg-green height-50"></div>
+
+                </div>
+
+            </div>
+
+            <div class="col-5 bg-blue padding-10">
+
+                <div class="row">
+
+                    <div class="col-6 bg-green height-50"></div>
+
+                    <div class="col-6 bg-green height-50"></div>
+
+                </div>
+
+            </div>
+
+        </div>
+
+    </div>
+
+    <div class="container margin-top-10">
+
+        <h2>Alignment</h2>
+
+        <div class="row">
+
+            <div class="col-6 height-50 bg-blue"></div>
+
+        </div>
+
+        <div class="row center">
+
+            <div class="col-6 height-50 bg-blue"></div>
+
+        </div>
+
+        <div class="row content-end">
+
+            <div class="col-6 height-50 bg-blue"></div>
+
+        </div>
+
+        <div class="row">
+
+            <div class="col-6 height-100 bg-blue"></div>
+
+            <div class="col-6 height-50 bg-blue"></div>
+
+        </div>
+
+        <div class="row middle">
+
+            <div class="col-6 height-100 bg-blue"></div>
+
+            <div class="col-6 height-50 bg-blue"></div>
+
+        </div>
+
+        <div class="row align-end">
+
+            <div class="col-6 height-100 bg-blue"></div>
+
+            <div class="col-6 height-50 bg-blue"></div>
+
+        </div>
+
+    </div>
+
+
+    <div class="container margin-top-10">
+        <h2>Justify Content</h2>
+        <h3>Space Around</h3>
+
+        <div class="row">
+
+            <div class="col-12 padding-10 bg-blue">
+
+                <div class="row space-around">
+
+                    <div class="col-2 height-50 bg-green"></div>
+
+                    <div class="col-2 height-50 bg-green"></div>
+
+                    <div class="col-2 height-50 bg-green"></div>
+
+                </div>
+
+            </div>
+
+        </div>
+
+
+        <div class="row">
+
+            <div class="col-12 padding-10 bg-blue">
+
+                <div class="row space-between">
+
+                    <div class="col-2 height-50 bg-green"></div>
+
+                    <div class="col-2 height-50 bg-green"></div>
+
+                    <div class="col-2 height-50 bg-green"></div>
+
+                </div>
+
+            </div>
+
+        </div>
 
 
     </div>
