--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
 
-    <div class="container">
+    <div class="container margin-top-10">
 
         <h2>Esercizio per Casa</h2>
 
@@ -313,7 +313,7 @@
 
 
         <div class="row">
-
+            <h3>Space Between</h3>
             <div class="col-12 padding-10 bg-blue">
 
                 <div class="row space-between">
