--- a/index.html
+++ b/index.html
@@ -17,7 +17,11 @@
         <h2>Esercizio per Casa</h2>
 
         <div class="row">
-            <div class="col-1 bg-blue height-50"></div>
+
+            <div class="col-1 bg-blue height-50 flex middle center">
+                <p>col 1</p>
+            </div>
+
             <div class="col-1 bg-blue height-50"></div>
             <div class="col-1 bg-blue height-50"></div>
             <div class="col-1 bg-blue height-50"></div>
