--- a/index.html
+++ b/index.html
@@ -12,16 +12,17 @@
 
 <body>
 
+    <!-- Esercizio per casa -->
+
     <div class="container margin-top-10">
 
         <h2>Esercizio per Casa</h2>
 
         <div class="row">
 
-            <div class="col-1 bg-blue height-50 flex middle center">
+            <div class="col-1 col-lg-2 flex bg-blue height-50  middle center">
                 <p>col 1</p>
             </div>
-
             <div class="col-1 bg-blue height-50"></div>
             <div class="col-1 bg-blue height-50"></div>
             <div class="col-1 bg-blue height-50"></div>
@@ -89,6 +90,7 @@
 
     </div>
 
+    <!-- esercizio per casa seconda parte -->
 
     <div class="container margin-top-10">
 
@@ -128,6 +130,7 @@
 
     </div>
 
+    <!-- Offset -->
 
     <div class="container margin-top-10">
 
@@ -209,6 +212,8 @@
 
     </div>
 
+    <!-- nested -->
+
     <div class="container margin-top-10">
         <h2>Nested</h2>
 
@@ -243,6 +248,8 @@
         </div>
 
     </div>
+
+    <!-- Allignment -->
 
     <div class="container margin-top-10">
 
@@ -292,6 +299,7 @@
 
     </div>
 
+    <!-- Justify content -->
 
     <div class="container margin-top-10">
         <h2>Justify Content</h2>
